hphp/hack/test/typecheck/shape_idx_generic2.php.like_types.exp
File "shape_idx_generic2.php", line 6, characters 24-25:
Invalid argument (Typing[4110])
File "shape_idx_generic2.php", line 6, characters 24-25:
Expected shape(?'x' => [unresolved], ...) because Shapes::idx expects a shape
File "shape_idx_generic2.php", line 5, characters 24-24:
But got T
